--- a/concejo.html
+++ b/concejo.html
@@ -84,37 +84,37 @@
                                 </li></button> 
                                   <div class="collapse" id="partido-u">
                                     <ul class="btn-toggle-nav list-unstyled">
-                                    <li class="list-group-item">Audry Maria Toro Echavarría <span class="badge">19.363 <i>(2,6%)</i></span>
-                                    <li class="list-group-item">Tania Fernandez Sánchez <span class="badge">18.226 <i>(2,4%)</i></span>
-                                    <li class="list-group-item">Henry Peláez Cifuentes <span class="badge">16.853 <i>(2,2%)</i></span>
-                                    <li class="list-group-item">Carlos Andrés Arias Rueda <span class="badge">14.483 <i>(1,9%)</i></span>
+                                    <li class="list-group-item"><a href="https://www.lasillavacia.com/quien-es-quien/audry-maria-toro-echavarria/" target="_blank">Audry Maria Toro Echavarría</a> <span class="badge">19.363 <i>(2,6%)</i></span>
+                                    <li class="list-group-item"><a href="https://www.lasillavacia.com/quien-es-quien/tania-fernandez-sanchez/" target="_blank">Tania Fernandez Sánchez </a><span class="badge">18.226 <i>(2,4%)</i></span>
+                                    <li class="list-group-item"><a href="https://www.lasillavacia.com/quien-es-quien/henry-pelaez-cifuentes/" target="_blank">Henry Peláez Cifuentes</a> <span class="badge">16.853 <i>(2,2%)</i></span>
+                                    <li class="list-group-item"><a href="https://www.lasillavacia.com/quien-es-quien/carlos-andres-arias-rueda/" target="_blank">Carlos Andrés Arias Rueda</a> <span class="badge">14.483 <i>(1,9%)</i></span>
                                     </div>
                               <button class="btn btn-toggle align-items-center rounded collapsed" data-bs-toggle="collapse" data-bs-target="#partido-liberal">
                                  <li class="list-group-item">Partido Liberal <span class="badge">85.764 <i>(11,4%)</i></span><span class="badge">3 curules</span>
                                 </li></button>
                                 <div class="collapse" id="partido-liberal">
                                   <ul class="btn-toggle-nav list-unstyled">
-                                  <li class="list-group-item">Carlos Hernando Pinilla Malo <span class="badge">18.721 <i>(2,5%)</i></span>
-                                  <li class="list-group-item">Fabio Alonso Arroyave Botero <span class="badge">16.392 <i>(2,2%)</i></span>
-                                  <li class="list-group-item">James Junior Agudelo Arevalo <span class="badge">13.566 <i>(1,8%)</i></span>
+                                  <li class="list-group-item"><a href="https://www.lasillavacia.com/quien-es-quien/carlos-pinilla-malo/" target="_blank">Carlos Hernando Pinilla Malo</a> <span class="badge">18.721 <i>(2,5%)</i></span>
+                                  <li class="list-group-item"><a href="https://www.lasillavacia.com/quien-es-quien/fabio-alonso-arroyave-botero/" target="_blank">Fabio Alonso Arroyave Botero</a> <span class="badge">16.392 <i>(2,2%)</i></span>
+                                  <li class="list-group-item"><a href="https://www.lasillavacia.com/quien-es-quien/james-junior-agudelo-arevalo/" target="_blank">James Junior Agudelo Arevalo</a> <span class="badge">13.566 <i>(1,8%)</i></span>
                                   </div>
                                 <button class="btn btn-toggle align-items-center rounded collapsed" data-bs-toggle="collapse" data-bs-target="#pacto">
                               <li class="list-group-item">Pacto Histórico <span class="badge">83.041 <i>(11%)</i></span><span class="badge">3 curules</span>
                               </li></button>
                               <div class="collapse" id="pacto">
                                 <ul class="btn-toggle-nav list-unstyled">
-                                <li class="list-group-item">Ana Leidy Erazo Ruiz </span>
+                                <li class="list-group-item"><a href="https://www.lasillavacia.com/quien-es-quien/ana-leidy-erazo-ruiz/" target="_blank">Ana Leidy Erazo Ruiz</a> </span>
                                 <li class="list-group-item">Luis Fernando Salazar Guapacha </span>
-                                <li class="list-group-item">Maria del Carmen Londoño Sanna </span>
+                                <li class="list-group-item"><a href="https://www.lasillavacia.com/quien-es-quien/maria-del-carmen-londono-sanna/" target="_blank">Maria del Carmen Londoño Sanna</a> </span>
                                 </div>
                                 <button class="btn btn-toggle align-items-center rounded collapsed" data-bs-toggle="collapse" data-bs-target="#partido-verde">
                                 <li class="list-group-item">Partido Verde <span class="badge">82.584 <i>(11%)</i></span><span class="badge">3 curules</span>
                                 </li></button>
                                 <div class="collapse" id="partido-verde">
                                   <ul class="btn-toggle-nav list-unstyled">
-                                  <li class="list-group-item">Flower Enrique Rojas Torres <span class="badge">16.772 <i>(2,2%)</i></span>
-                                  <li class="list-group-item">Rodrigo Salazar Sarmiento <span class="badge">16.344 <i>(2,2%)</i></span> 
-                                  <li class="list-group-item">Carlos Ariel Patiño Moya <span class="badge">10.807 <i>(1,4%)</i></span>
+                                  <li class="list-group-item"><a href="https://www.lasillavacia.com/quien-es-quien/flower-enrique-rojas-torres/" target="_blank">Flower Enrique Rojas Torres</a> <span class="badge">16.772 <i>(2,2%)</i></span>
+                                  <li class="list-group-item"><a href="https://www.lasillavacia.com/quien-es-quien/rodrigo-salazar-sarmiento/" target="_blank">Rodrigo Salazar Sarmiento</a> <span class="badge">16.344 <i>(2,2%)</i></span> 
+                                  <li class="list-group-item"><a href="" target="_blank" rel="noopener noreferrer"></a>Carlos Ariel Patiño Moya <span class="badge">10.807 <i>(1,4%)</i></span>
                                   </div>
                                   <button class="btn btn-toggle align-items-center rounded collapsed" data-bs-toggle="collapse" data-bs-target="#centro-democratico">
                                   <li class="list-group-item">Centro Democrático <span class="badge">64.440 <i>(8,6%)</i></span><span class="badge">2 curules</span>
@@ -122,7 +122,7 @@
                                   <div class="collapse" id="centro-democratico">
                                     <ul class="btn-toggle-nav list-unstyled">
                                     <li class="list-group-item">Rafael Andrés Escobar González <span class="badge">16.772 <i>(2,2%)</i></span>
-                                    <li class="list-group-item">Juan Felipe Murgueitio Bustamante <span class="badge">16.344 <i>(2,2%)</i></span> 
+                                    <li class="list-group-item"><a href="https://www.lasillavacia.com/quien-es-quien/juan-felipe-murgueitio-bustamante/" target="_blank">Juan Felipe Murgueitio Bustamante</a> <span class="badge">16.344 <i>(2,2%)</i></span> 
                                     </div>
                                     <button class="btn btn-toggle align-items-center rounded collapsed" data-bs-toggle="collapse" data-bs-target="#cambio-radical">
                                   <li class="list-group-item">Cambio Radical <span class="badge">40.787 <i>(5,4%)</i></span><span class="badge">2 curules</span>
@@ -130,21 +130,21 @@
                                   <div class="collapse" id="cambio-radical">
                                     <ul class="btn-toggle-nav list-unstyled">
                                     <li class="list-group-item">Edison Lucumi Lucumi <span class="badge">17.043 <i>(2,3%)</i></span>
-                                    <li class="list-group-item">Alexandra Hernandez Cedeño <span class="badge">9.272 <i>(1,2%)</i></span> 
+                                    <li class="list-group-item"><a href="https://www.lasillavacia.com/quien-es-quien/alexandra-hernandez-cedeno/" target="_blank">Alexandra Hernandez Cedeño</a> <span class="badge">9.272 <i>(1,2%)</i></span> 
                                     </div>
                                   <button class="btn btn-toggle align-items-center rounded collapsed" data-bs-toggle="collapse" data-bs-target="#partido-conservador">
                               <li class="list-group-item">Partido Conservador <span class="badge">40.787 <i>(6,4%)</i></span><span class="badge">1 curul</span>
                               </li></button>
                               <div class="collapse" id="partido-conservador">
                                 <ul class="btn-toggle-nav list-unstyled">
-                                <li class="list-group-item">Marlon Andrés Cubillos Borrero <span class="badge">17.043 <i>(2,3%)</i></span>
+                                <li class="list-group-item"><a href="https://www.lasillavacia.com/quien-es-quien/marlon-andres-cubillos-borrero/" target="_blank">Marlon Andrés Cubillos Borrero</a> <span class="badge">17.043 <i>(2,3%)</i></span>
                                 </div>
                                 <button class="btn btn-toggle align-items-center rounded collapsed" data-bs-toggle="collapse" data-bs-target="#cali-une">
                               <li class="list-group-item">Cali Nos Une <span class="badge">31.467 <i>(4,2%)</i></span><span class="badge">1 curul</span>
                               </li></button>
                               <div class="collapse" id="cali-une">
                                 <ul class="btn-toggle-nav list-unstyled">
-                                <li class="list-group-item">Edison Alberto Giraldo Hoyos <span class="badge">12.578 <i>(1,7%)</i></span>
+                                <li class="list-group-item"><a href="https://www.lasillavacia.com/quien-es-quien/edison-alberto-giraldo-hoyos/" target="_blank">Edison Alberto Giraldo Hoyos</a> <span class="badge">12.578 <i>(1,7%)</i></span>
                                 </div>
                                 <button class="btn btn-toggle align-items-center rounded collapsed" data-bs-toggle="collapse" data-bs-target="#colombia-renaciente">
                               <li class="list-group-item">Colombia Renaciente <span class="badge"><i>30.603 (4,1%)</i></span><span class="badge">1 curul</span>
@@ -158,41 +158,11 @@
                               </li></button>
                               <div class="collapse" id="firmes-cali">
                                 <ul class="btn-toggle-nav list-unstyled">
-                                <li class="list-group-item">Roberto Ortiz </span>
+                                <li class="list-group-item"><a href="https://www.lasillavacia.com/quien-es-quien/roberto-ortiz-uruena/" target="_blank">Roberto Ortiz</a> </span>
                                 </div>
                             </ul>
                         </div>
-                        
-                        <div class="widget convenciones">
-                            <h3 class="titulo">Convenciones</h3>
-                            <div class="contenedor d-flex flex-wrap">
-                                <div class="caja">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="red" class="bi bi-circle-fill" viewBox="0 0 16 16">
-                                    <circle cx="5" cy="5" r="5"/>
-                                </svg>
-                                <span>Calles en mal estado</span>
-                                </div>
-                            
-                                <div class="caja">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="yellow" class="bi bi-geo" viewBox="0 0 16 16">
-                                    <path d="M9.97 4.88.953 3.811C10.159 8.878 9.14 9 8 9c-1.14 0-2.158-.122-2.923-.309L6.03 4.88C6.635 4.957 7.3 5 8 5s1.365-.043 1.97-.12zm-.245-.978L8.97.88C8.718-.13 7.282-.13 7.03.88L6.275 3.9C6.8 3.965 7.382 4 8 4c.618 0 1.2-.036 1.725-.098zm4.396 8.613a.5.5 0 0 1 .037.96l-6 2a.5.5 0 0 1-.316 0l-6-2a.5.5 0 0 1 .037-.96l2.391-.598.565-2.257c.862.212 1.964.339 3.165.339s2.303-.127 3.165-.339l.565 2.257 2.391.598z"/>
-                                </svg>
-                                <span>Obras públicas</span>
-                                </div>
-                                <div class="caja">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="green" class="bi bi-geo" viewBox="0 0 16 16">
-                                    <path d="M 8.4 0.2 A 0.5 0.5 90 0 0 7.6 0.2 L 4.6 4.7 A 0.5 0.5 90 0 0 5 5.5 H 5.1 L 3.1 8.7 A 0.5 0.5 90 0 0 3.5 9.5 H 3.7 L 2.1 12.8 A 0.5 0.5 90 0 0 2.5 13.5 H 7 V 16 H 9 V 13.5 H 13.5 A 0.5 0.5 90 0 0 13.9 12.8 L 12.3 9.5 H 12.5 A 0.5 0.5 90 0 0 12.9 8.7 L 10.9 5.5 H 11 A 0.5 0.5 90 0 0 11.4 4.7 L 8.4 0.2 Z Z"/>
-                                </svg>
-                                <span>Parques</span>
-                                </div>
-                                <div class="caja">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="yellow" class="bi bi-geo" viewBox="0 0 16 16">
-                                    <path d="M8 1.5a.5.5 0 0 1 .5.5V7h5.5a.5.5 0 0 1 0 1H8v5.5a.5.5 0 0 1-1 0V8H1.5a.5.5 0 0 1 0-1H7V1.5a.5.5 0 0 1 .5-.5z"/>
-                                </svg>
-                                <span>Iglesias</span>
-                                </div>
-                            </div>
-                        </div>
+
                     </div>
 
                     <div class="columna col-lg-5">
@@ -326,4 +296,3 @@ al presente, también exige pensar prospectivamente la ciudad y la región que q
   </body>
 
 </html>
-
