--- a/dashboard-cataya.html
+++ b/dashboard-cataya.html
@@ -25,18 +25,18 @@
             <ul class="menu list-unstyled ps-0">
               <li class="mb-1">
                 <button class="btn align-items-center rounded" data-bs-toggle="" data-bs-target="#home-collapse">
-                  <i class="icon-home"></i><span>Home</span>
+                  <a style="margin-left: 0px !important;" href="index.html"><i class="icon-home"></i><span>Home</span></a>
                 </button>
               </li>
               <li class="mb-1">
                 <button class="btn btn-toggle align-items-center rounded collapsed" data-bs-toggle="collapse" data-bs-target="#barrios-collapse">
                     <i class="icon-building"></i><span>Barrios</span>
                 </button>
-                <div class="collapse show" id="barrios-collapse">
+                <div class="collapse" id="barrios-collapse">
                   <ul class="btn-toggle-nav list-unstyled">
-                    <li><a href="dashboard-cataya.html" class="link rounded">Gran Limonar - Cataya</a></li>
-                    <li><a href="dashboard-gran-limonar.html" class="link rounded">Gran Limonar</a></li>
-                    <li><a href="dashboard-la-hacienda.html" class="link rounded">La Hacienda</a></li>
+                    <li><a href="dashboard-cataya.html" class="link rounded">- Gran Limonar - Cataya</a></li>
+                    <li><a href="dashboard-gran-limonar.html" class="link rounded">- Gran Limonar</a></li>
+                    <li><a href="dashboard-la-hacienda.html" class="link rounded">- La Hacienda</a></li>
                   </ul>
                 </div>
               </li>
@@ -46,9 +46,9 @@
                 </button>
                 <div class="collapse" id="elecciones-collapse">
                   <ul class="btn-toggle-nav list-unstyled">
-                    <li><a href="#" class="link rounded">Concejo</a></li>
-                    <li><a href="#" class="link rounded">Ediles</a></li>
-                    <li><a href="#" class="link rounded">Alcaldía</a></li>
+                    <li><a href="concejo.html" class="link rounded">- Concejo</a></li>
+                    <li><a href="ediles.html" class="link rounded">- Ediles</a></li>
+                    <li><a href="alcaldia.html" class="link rounded">- Alcaldía</a></li>
                   </ul>
                 </div>
               </li>
