--- a/cineclubes.html
+++ b/cineclubes.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="./style.css">
-    <script type="module" src="./gran-limonar.ts"></script>
+    <script type="module" src="./cineclubes.ts"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Roboto:wght@300;700&display=swap" rel="stylesheet">
@@ -41,6 +41,11 @@
                 </div>
               </li>
               <li class="mb-1">
+                <button class="btn btn-toggle align-items-center rounded">
+                  <a style="margin-left: 0px !important;" href="cineclubes.html"><i class="icon-play"></i><span>Cineclubes</span></a>
+                </button>
+              </li>
+              <li class="mb-1">
                 <button class="btn btn-toggle align-items-center rounded collapsed" data-bs-toggle="collapse" data-bs-target="#elecciones-collapse">
                     <i class="icon-angellist"></i><span>Elecciones Regionales 2023</span>
                 </button>
@@ -72,7 +77,7 @@
             <main class="main col">
                 <div class="row">
                     <div class="columna col-lg-12">
-                        <h1 class="titulo-h1">Gran Limonar</h1>
+                        <h1 class="titulo-h1">Cineclubes de Cali</h1>
                     </div>
 
                     <div class="columna col-lg-7">
@@ -114,21 +119,21 @@
 
                     <div class="columna col-lg-5">
                         <div class="widget estadisticas">
-                            <h3 class="titulo">Datos del Barrio</h3>
+                            <h3 class="titulo">Datos Generales</h3>
                             <div class="contenedor d-flex flex-wrap">
                                 <div class="caja">
-                                    <h3>2.343</h3>
-                                    <p>Habitantes</p>
-                                    <i>(2015)</i>
+                                    <h3>13</h3>
+                                    <p>Cineclubes</p>
+                                    <i>(Junio 2023)</i>
                                 </div>
                                 <div class="caja">
                                     <h3>133 hab/ha</h3>
                                     <p>Densidad</p>
-                                    <i>(2015)</i>
+                                    <i>(2018)</i>
 
                                 </div>
                                 <div class="caja">
-                                    <h3>18 ha.</h3>
+                                    <h3>1.255 ha.</h3>
                                     <p>Superficie</p>
                                 </div>
                             </div>
