--- a/cineclubes.html
+++ b/cineclubes.html
@@ -86,35 +86,28 @@
                             <div id="map" style="width: 100%; height: 400px;"></div>
                         </div>
                         <div class="widget convenciones">
-                            <h3 class="titulo">Convenciones</h3>
-                            <div class="contenedor d-flex flex-wrap">
-                                <div class="caja">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="red" class="bi bi-circle-fill" viewBox="0 0 16 16">
-                                    <circle cx="5" cy="5" r="5"/>
-                                </svg>
-                                <span>Calles en mal estado</span>
-                                </div>
-                            
-                                <div class="caja">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="yellow" class="bi bi-geo" viewBox="0 0 16 16">
-                                    <path d="M9.97 4.88.953 3.811C10.159 8.878 9.14 9 8 9c-1.14 0-2.158-.122-2.923-.309L6.03 4.88C6.635 4.957 7.3 5 8 5s1.365-.043 1.97-.12zm-.245-.978L8.97.88C8.718-.13 7.282-.13 7.03.88L6.275 3.9C6.8 3.965 7.382 4 8 4c.618 0 1.2-.036 1.725-.098zm4.396 8.613a.5.5 0 0 1 .037.96l-6 2a.5.5 0 0 1-.316 0l-6-2a.5.5 0 0 1 .037-.96l2.391-.598.565-2.257c.862.212 1.964.339 3.165.339s2.303-.127 3.165-.339l.565 2.257 2.391.598z"/>
-                                </svg>
-                                <span>Obras públicas</span>
-                                </div>
-                                <div class="caja">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="green" class="bi bi-geo" viewBox="0 0 16 16">
-                                    <path d="M 8.4 0.2 A 0.5 0.5 90 0 0 7.6 0.2 L 4.6 4.7 A 0.5 0.5 90 0 0 5 5.5 H 5.1 L 3.1 8.7 A 0.5 0.5 90 0 0 3.5 9.5 H 3.7 L 2.1 12.8 A 0.5 0.5 90 0 0 2.5 13.5 H 7 V 16 H 9 V 13.5 H 13.5 A 0.5 0.5 90 0 0 13.9 12.8 L 12.3 9.5 H 12.5 A 0.5 0.5 90 0 0 12.9 8.7 L 10.9 5.5 H 11 A 0.5 0.5 90 0 0 11.4 4.7 L 8.4 0.2 Z Z"/>
-                                </svg>
-                                <span>Parques</span>
-                                </div>
-                                <div class="caja">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="yellow" class="bi bi-geo" viewBox="0 0 16 16">
-                                    <path d="M8 1.5a.5.5 0 0 1 .5.5V7h5.5a.5.5 0 0 1 0 1H8v5.5a.5.5 0 0 1-1 0V8H1.5a.5.5 0 0 1 0-1H7V1.5a.5.5 0 0 1 .5-.5z"/>
-                                </svg>
-                                <span>Iglesias</span>
-                                </div>
-                            </div>
-                        </div>
+                            <h3 class="titulo">Lista de Cineclubes</h3>
+                                  <ul class="list-group">
+                                      <li class="list-group-item">Cine Quanon <span class="badge">San Nicolás</span><span class="badge">@cinequanoncali</span></li> 
+                                      <li class="list-group-item">Casa Mangle <span class="badge">El Hoyo</span><span class="badge">@casamanglecali</span></li> 
+                                      <li class="list-group-item">Cinestribos <span class="badge">Centenario</span><span class="badge">@cinestribos</span></li> 
+                                      <li class="list-group-item">Cine Café (Sala Audiovisual) <span class="badge">La Merced</span><span class="badge">@salaaudiovisualcali</span></li> 
+                                      <li class="list-group-item">Café Macondo <span class="badge">San Antonio</span><span class="badge">@cafe_macondo</span></li> 
+                                      <li class="list-group-item">La Negrona <span class="badge">La Merced</span><span class="badge">@lanegronacali</span></li> 
+                                      <li class="list-group-item">Teatro Los Cristales <span class="badge">Los Cristales</span><span class="badge">@teatroloscristalescali</span></li> 
+                                      <li class="list-group-item">EnBiciArte <span class="badge">Santa Elena</span><span class="badge">@enbiciartecali</span></li> 
+                                      <li class="list-group-item">Dulcencanto <span class="badge">San Fernando Viejo</span><span class="badge">@dulcencanto_cali</span></li> 
+                                      <li class="list-group-item">Cinemandra <span class="badge">105.801 <i>(14%)</i></span><span class="badge">@teatrosalamandra</span></li> 
+                                      <li class="list-group-item">Cine Consciencia <span class="badge">Puerto Resistencia</span><span class="badge"></span></li> 
+                                      <li class="list-group-item">Fancineros (Oromo) <span class="badge">Capri</span><span class="badge">@oromocafelibreria</span></li> 
+                                      <li class="list-group-item">Cinnerante <span class="badge">La Leonera</span><span class="badge">@cinerrantedelospueblos</span></li> 
+                                      <li class="list-group-item">La Truca <span class="badge">Itinerante</span><span class="badge">@latrucacc</span></li> 
+                                      <li class="list-group-item">DeBorondo <span class="badge">Itinerante</span><span class="badge">@deborondo_cultural</span></li> 
+                                      <li class="list-group-item">Cali Terror <span class="badge">Itinerante</span><span class="badge">@caliterror</span></li> 
+                                        
+                                  </ul>
+                              </div>
+
                     </div>
 
                     <div class="columna col-lg-5">
@@ -127,14 +120,14 @@
                                     <i>(Junio 2023)</i>
                                 </div>
                                 <div class="caja">
-                                    <h3>133 hab/ha</h3>
-                                    <p>Densidad</p>
-                                    <i>(2018)</i>
+                                    <h3>4</h3>
+                                    <p>Comunas</p>
+                                    <i>(Junio 2023)</i>
 
                                 </div>
                                 <div class="caja">
-                                    <h3>1.255 ha.</h3>
-                                    <p>Superficie</p>
+                                    <h3>200</h3>
+                                    <p>Asistentes Aprox.</p>
                                 </div>
                             </div>
                         </div>
