--- a/concejo.html
+++ b/concejo.html
@@ -41,6 +41,11 @@
                 </div>
               </li>
               <li class="mb-1">
+                <button class="btn btn-toggle align-items-center rounded">
+                  <a style="margin-left: 0px !important;" href="cineclubes.html"><i class="icon-play"></i><span>Cineclubes</span></a>
+                </button>
+              </li>
+              <li class="mb-1">
                 <button class="btn btn-toggle align-items-center rounded collapsed" data-bs-toggle="collapse" data-bs-target="#elecciones-collapse">
                     <i class="icon-angellist"></i><span>Elecciones Regionales 2023</span>
                 </button>
@@ -247,6 +252,14 @@ Constitución Nacional de Colombia facultó
 a la sociedad civil. Aunque, se puede entender como un ejercicio democrático de cara 
 al presente, también exige pensar prospectivamente la ciudad y la región que queremos construir en el mediano y largo plazo.    </li>
                                   </div>
+                            </ul>
+                        </div>
+                        <div class="widget comentarios list-group">
+                            <h3 class="titulo">Últimos Acuerdos</h3>
+                            <ul class="list-group">
+                              
+                                <li class="list-group-item">¿Por qué es importante hacer seguimiento al Concejo?</i></span>
+                                </li>
                             </ul>
                         </div>
                         <div class="widget nueva_entrada">
