--- a/dashboard-la-hacienda.html
+++ b/dashboard-la-hacienda.html
@@ -41,6 +41,11 @@
                 </div>
               </li>
               <li class="mb-1">
+                <button class="btn btn-toggle align-items-center rounded">
+                  <a style="margin-left: 0px !important;" href="cineclubes.html"><i class="icon-play"></i><span>Cineclubes</span></a>
+                </button>
+              </li>
+              <li class="mb-1">
                 <button class="btn btn-toggle align-items-center rounded collapsed" data-bs-toggle="collapse" data-bs-target="#elecciones-collapse">
                     <i class="icon-angellist"></i><span>Elecciones Regionales 2023</span>
                 </button>
