--- a/index.html
+++ b/index.html
@@ -88,31 +88,40 @@
                         <div class="widget convenciones">
                             <h3 class="titulo">Convenciones</h3>
                             <div class="contenedor d-flex flex-wrap">
-                                <div class="caja">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="red" class="bi bi-circle-fill" viewBox="0 0 16 16">
-                                    <circle cx="5" cy="5" r="5"/>
-                                </svg>
-                                <span>Calles en mal estado</span>
-                                </div>
+                                <div class="contenedor d-flex flex-wrap">
+                                  <div class="caja">
+                                      <i class="icon-book-open" style="color: yellow;"></i>
+                                      <span>Colegios</span>
+                                  </div>
                             
-                                <div class="caja">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="yellow" class="bi bi-geo" viewBox="0 0 16 16">
-                                    <path d="M9.97 4.88.953 3.811C10.159 8.878 9.14 9 8 9c-1.14 0-2.158-.122-2.923-.309L6.03 4.88C6.635 4.957 7.3 5 8 5s1.365-.043 1.97-.12zm-.245-.978L8.97.88C8.718-.13 7.282-.13 7.03.88L6.275 3.9C6.8 3.965 7.382 4 8 4c.618 0 1.2-.036 1.725-.098zm4.396 8.613a.5.5 0 0 1 .037.96l-6 2a.5.5 0 0 1-.316 0l-6-2a.5.5 0 0 1 .037-.96l2.391-.598.565-2.257c.862.212 1.964.339 3.165.339s2.303-.127 3.165-.339l.565 2.257 2.391.598z"/>
-                                </svg>
-                                <span>Obras públicas</span>
+                                  <div class="caja">
+                                    <i class="icon-commerical-building" style="color: yellow;"></i>
+                                    <span>Universidades</span>
                                 </div>
                                 <div class="caja">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="green" class="bi bi-geo" viewBox="0 0 16 16">
-                                    <path d="M 8.4 0.2 A 0.5 0.5 90 0 0 7.6 0.2 L 4.6 4.7 A 0.5 0.5 90 0 0 5 5.5 H 5.1 L 3.1 8.7 A 0.5 0.5 90 0 0 3.5 9.5 H 3.7 L 2.1 12.8 A 0.5 0.5 90 0 0 2.5 13.5 H 7 V 16 H 9 V 13.5 H 13.5 A 0.5 0.5 90 0 0 13.9 12.8 L 12.3 9.5 H 12.5 A 0.5 0.5 90 0 0 12.9 8.7 L 10.9 5.5 H 11 A 0.5 0.5 90 0 0 11.4 4.7 L 8.4 0.2 Z Z"/>
-                                </svg>
-                                <span>Parques</span>
-                                </div>
-                                <div class="caja">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="yellow" class="bi bi-geo" viewBox="0 0 16 16">
-                                    <path d="M8 1.5a.5.5 0 0 1 .5.5V7h5.5a.5.5 0 0 1 0 1H8v5.5a.5.5 0 0 1-1 0V8H1.5a.5.5 0 0 1 0-1H7V1.5a.5.5 0 0 1 .5-.5z"/>
-                                </svg>
+                                  <i class="icon-tree" style="color: yellow;"></i>
+                                  <span>Parques</span>
+                              </div>
+                              <div class="caja">
+                                <i class="icon-plus" style="color: yellow;"></i>
                                 <span>Iglesias</span>
-                                </div>
+                            </div>
+                            </div>
+                            <div class="contenedor d-flex flex-wrap mt-3">
+                              <div class="caja">
+                                <i class="icon-user-md" style="color: yellow;"></i>
+                                <span>Centros de Salud</span>
+                            </div>
+                            
+                            <div class="caja">
+                              <i class="icon-police" style="color: yellow;"></i>
+                              <span>Comisarías</span>
+                          </div>
+                          <div class="caja">
+                            <i class="icon-shopping-bag" style="color: yellow;"></i>
+                            <span>Centros Comerciales</span>
+                        </div>
+                            </div>
                             </div>
                         </div>
                     </div>
